feat: 다이어리 컴포넌트 구현

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,3 +36,13 @@ body::-webkit-scrollbar {
 .default-bullet {
   background-color: #e6e6e6;
 }
+
+.text-overflow {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  word-break: break-word;
+
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
