feat: 일기 상세 페이지 레이아웃 구현

--- a/app/globals.css
+++ b/app/globals.css
@@ -46,3 +46,18 @@ body::-webkit-scrollbar {
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
 }
+
+.swiper-clip-path {
+  clip-path: polygon(
+    0 52%,
+    0 67%,
+    20% 79%,
+    50% 83%,
+    80% 78%,
+    100% 65%,
+    100% 50%,
+    76% 66%,
+    50% 71%,
+    22% 67%
+  );
+}
