--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+@import 'swiper/css';
+@import 'swiper/css/effect-fade';
+
 * {
   margin: 0;
   padding: 0;
@@ -18,31 +21,10 @@ body::-webkit-scrollbar {
   display: none;
 }
 
-.swiper-pagination {
-  width: 54px;
-  height: 6px;
-  position: absolute;
-  top: 0px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  justify-content: space-between;
+#onboarding .swiper-wrapper {
+  height: calc(100% - 180px);
 }
 
-.active-bullet {
-  background-color: #99b17b !important;
-}
-
-.default-bullet {
-  background-color: #e6e6e6;
-}
-
-.text-overflow {
-  text-overflow: ellipsis;
+#onboarding .swiper-slide {
   overflow: hidden;
-  word-break: break-word;
-
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
 }
